Fixed a display bug on mobile screen sizes: used display and margin properties to do so

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,8 @@ main h1 {
 .container img {
     width: 80px;
     border-radius: 50%;
-    margin-bottom: 5px;
+    display: flex;
+    margin: 0 auto 5px;
 }
 
 .text-box {
